Improve Travis configuration

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
     "stackexchange",
     "stackoverflow"
   ],
+  "scripts": {
+    "test": "phpunit"
+  },
   "require": {
     "league/oauth2-client": "^2.2"
   },
