--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: php
 
+php:
+  - 7.0
+  - 7.1
+
 sudo: false
 
 cache:
@@ -13,17 +17,15 @@ git:
 matrix:
   fast_finish: true
   include:
-    - php: 5.6
     - php: 7
       env:
         - COMPOSER_FLAGS="--prefer-stable"
-    - php: 7.1
 
 before_script:
-  - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-source --ignore-platform-reqs
+  - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-source
 
 script:
-  - vendor/bin/phpunit --report-useless-tests
+  - composer test
 
 after_script:
   - bash -c '[[ -f "build/logs/clover.xml" ]] && wget https://scrutinizer-ci.com/ocular.phar'
