--- a/composer.json
+++ b/composer.json
@@ -15,15 +15,18 @@
     "stackexchange",
     "stackoverflow"
   ],
+  "config": {
+    "sort-packages": true
+  },
   "scripts": {
     "test": "phpunit"
   },
   "require": {
+    "php": "^7.0",
     "league/oauth2-client": "^2.2"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.0",
-    "eloquent/phony": "^0.14"
+    "phpunit/phpunit": "^6.2"
   },
   "autoload": {
     "psr-4": {
@@ -32,7 +35,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "AlexMasterov\\OAuth2\\Client\\Test\\Provider\\": "tests/"
+      "AlexMasterov\\OAuth2\\Client\\Provider\\Tests\\": "tests/"
     }
   }
 }
